--- a/style.css
+++ b/style.css
@@ -209,3 +209,91 @@ img{
 }
 .card{
     box-shadow: 2.5px 4.33px 30px 0 rgba(64,87,191,0.1);
+}
+.fea-h1 h1 {
+    margin-bottom: 130px;
+    line-height: 1.4;
+}
+.fea-p p {
+    color: #767676;
+    font-size: 23.8px;
+    line-height: 1.5;
+    padding-top: 16px;
+    font-weight: 400;
+    margin-bottom: 55px;
+}
+.card-body h4{
+    font-size: 1.3rem;
+    font-weight:500;
+    line-height: 1.5;
+    
+}
+.card-body p {
+    color: #767676;
+    font-size: 1.3rem;
+}
+/* News Letter Section */
+.newsletter{
+    background: #f7f9ff;
+    padding: 80px 0;
+    
+}
+.type-email {
+    padding: 15px 0;
+    font-size: 20px;
+    font-weight: 500;
+}
+.button-1 {
+    display: inline-block;
+    text-decoration: none;
+    background: #6278df;
+    color: #fff;
+    padding: 14px 46px;
+    border-radius: 8px;
+    font-size: 23px;
+    font-weight: 500;
+    transition: 0.5s;
+}
+.button-1:hover{
+    background: #fff;
+    color:#6278df ;
+    outline: 2px solid #6278df;
+}
+.newsletter h1 {
+    font-size: 2.8rem;
+    margin-bottom: 41px;
+}
+.newsletter h5 {
+    color: #767676;
+    font-size: 24px;
+    font-weight: 400;
+    margin-bottom: 33px;
+}
+/* Contact Section */
+.contact{
+    padding: 50px;
+}
+.contact h1 {
+    font-size: 43px;
+    margin: 50px;
+    text-decoration: underline;
+}
+.btn-2 {
+    padding: 12px 39px;
+    font-size: 20px;
+    font-weight: 500;
+    margin-top: 12px;
+}
+/* Footer */
+.footer {
+    background: #8cc536;
+    padding: 20px 0;
+    margin-bottom: 10px;
+}
+.footer p {
+    color: #fff;
+    font-weight: 500;
+    font-size: 20px;
+    text-align: center;
+    margin: 0;
+}
