--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ img{
     margin-top: 5px;
 }
 .header-left ul li a:hover::after{
-    width: 80%;
+    transform: scaleX(1);
 }
 .header-left ul li a::after {
     content: "";
@@ -42,9 +42,10 @@ img{
     bottom: 5px;
     left: 10%;
     height: 2px;
-    width: 0;
+    width: 80%;
     background: #fff;
     transition: 0.5s;
+    transform: scaleX(0);
 }
 .header-right ul {
     margin: 0;
@@ -239,7 +240,7 @@ img{
     
 }
 .type-email {
-    padding: 15px 0;
+    padding: 15px;
     font-size: 20px;
     font-weight: 500;
 }
@@ -253,6 +254,7 @@ img{
     font-size: 23px;
     font-weight: 500;
     transition: 0.5s;
+    outline: 2px solid transparent;
 }
 .button-1:hover{
     background: #fff;
